--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,12 @@
+Version 0.3.7.1 (alpha) (2012-04-06)
+- fixed applications crashes on ICS (in UpdateActivity and InstallerHandler).
+- fixed InstallerHandler small bugs.
+
+Version 0.3.7 (alpha) (2012-04-04)
+- added new Time Preferences on Local preferences
+- improved autorefreshing on the tabs
+- fix some small bugs
+
 Version 0.3.6.3 (alpha) (2012-03-31)
 - fixed some NullPointerExceptions
 - fixed problems with client monitor handling (after shutting down eating CPU power)
