--- a/src/README
+++ b/src/README
@@ -4,4 +4,4 @@ curl-7.XX.XX - required library by BOINC
 openssl-7.XX.XX - required library by BOINC
 init.sh - setup script
 
-sorry for my english
+Before building anything program please setup init.sh and run 'source init.sh' from shell.
