--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.3.8.2 (alpha) (2012-05-09)
+- fixed refresh behavior on the tabs
+- fixed small Polish translations
+
 Version 0.3.8.1 (alpha) (2012-05-08)
 - added Polish translations
 
