--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -315,7 +315,6 @@
 	
 	<string name="updateFromSDCard">Update binaries from SDCard</string>
 	<string name="enterUpdateDir">Enter update directory</string>
-	
 	<string name="applyAfterRestart">Changes to be applied after restart. Do you want to restart client now?</string>
 	
 	<!-- dump boinc files -->
@@ -325,8 +324,10 @@
 	<string name="dumpBoincProgress">Dumping BOINC files</string>
 	<string name="dumpBoincFinish">Dumping BOINC files finished</string>
 	<string name="dumpBoincError">Error during dumping: %s</string>
+	<string name="dumpBoincWarn">Directory %s exists. During dumping will be deleted! Do you want really to continue dumping of BOINC files?</string>
 	
 	<!-- reinstall boinc -->
+	<string name="reinstallInProgress">Reinstalling BOINC</string>
 	<string name="reinstallFinish">Reinstallation finished</string>
 	<string name="reinstallQuestion">Reinstallation removes whole BOINC directory (including projects). Do you really want to reinstall BOINC?</string>
 	<string name="waitingForShutdown">Waiting for shutdown</string>
@@ -433,8 +434,8 @@
 	<string name="changes">Changes</string>
 	
 	<string name="noInstallOpsText">No operations in background.</string>
-	<string name="installProgressText">Installer are performing some operations in background.</string>
-	<string name="installingUpdating">Installing/Updating binaries</string>
+	<string name="installProgressText">NativeBOINC are performing some operations in background.</string>
+	<string name="operationsProgress">Operations progress</string>
 	
 	<!-- ProjectsActivity -->
 	<string name="projectCtxMenuTitle">Commands</string>
