--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -130,6 +130,7 @@
 		Thanks for:\n
 		Troll81 - for logo design.\n
 		BOINC@Poland - for support.\n
+		Haer and eLPeCKo from CNT - czech translation.\n
 	</string>
 
 	<!-- Preferences -->
