--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.3.9.1 (alpha) (2012-05-14)
+- fixed installation cancelling
+- fixed translations typo
+
 Version 0.3.9 (alpha) (2012-05-12)
 - added Czech translation (thanks for Haer and eLPeCKo from CNT)
 - fixed (directory deleting) (reinstall, dumping)
