NativeBOINC: added update from SDCARD for projects, whose are not supported by me and fixed deadlock on unsuccessful project installation.

--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.3.9.2 (alpha) (2012-05-16)
+- added update projects from SDCARD, whose are not supported
+- fixed deadlock after unsuccesful project installation
+
 Version 0.3.9.1 (alpha) (2012-05-14)
 - fixed installation cancelling
 - fixed translations typo
