NativeBOINC: added German translations (thanks for Daniel Winzen).

--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -21,8 +21,8 @@ Na Teraz:
 / * poprawic menu w main screen (Android 4.0) (częsciowo)
 / * przetestować autoinstalację po BAM (zrobione?)
 
-  * dodać opcję dodawania projektów nie wspieranych przez NativeBOINC (dla nativeboinc)
-  * umożliwić instalację aplikacji projektów nie wspieranych z SDCard
+/ * dodać opcję dodawania projektów nie wspieranych przez NativeBOINC (dla nativeboinc)
+/ * umożliwić instalację aplikacji projektów nie wspieranych z SDCard
 
   * poprawić autoryzacje clientmonitor (tylko jeden kod autoryzacyjny)
 ---------------------------------------------------------------
