--- a/src/NativeBOINC/res/values-pl/strings.xml
+++ b/src/NativeBOINC/res/values-pl/strings.xml
@@ -131,6 +131,7 @@
 		Troll81 - for logo design.\n
 		BOINC@Poland - for support.\n
 		Haer i eLPeCKo (CNT) - tłumaczenie na czeski.\n
+		Daniel Winzen - tłumaczenie na niemiecki.\n
 	</string>
 
 	<!-- Preferences -->
