--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,6 @@
+Version 0.3.9.2.1 (alpha) (2012-05-17)
+- added German translation (thanks for Daniel Winzen)
+
 Version 0.3.9.2 (alpha) (2012-05-16)
 - added update projects from SDCARD, whose are not supported
 - fixed deadlock after unsuccesful project installation
