--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -131,6 +131,7 @@
 		Troll81 - for logo design.\n
 		BOINC@Poland - for support.\n
 		Haer and eLPeCKo from CNT - czech translation.\n
+		Daniel Winzen - german translation.\n
 	</string>
 
 	<!-- Preferences -->
